<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_hostRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ee8b6a"
    tools:context="assignment02.csc214.project1.MainActivity">

    <TextView
        android:id="@+id/main_welcomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="#080808"
        android:text="@string/welcome_to_tripple_game"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/main_designedByTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_welcomTextView"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="#080808"
        android:textStyle="bold"
        android:text="@string/designed_by"/>

    <TextView
        android:id="@+id/main_myNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_designedByTextView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="#080808"
        android:textStyle="bold"
        android:text="@string/kennedy_agusi"/>

    <TextView
        android:id="@+id/main_textview"
        android:text="@string/please_enter_players_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#080808"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"/>

    <TextView
        android:id="@+id/main_playerOneNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/main_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/first_player"
        android:textColor="#080808"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/main_playerOneNameEditext"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/main_playerOneNameTextView"
        android:hint="@string/enter_first_player_s_name"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="#fafafa"/>


    <TextView
        android:id="@+id/main_playerTwoNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/main_playerOneNameEditext"
        android:layout_centerHorizontal="true"
        android:text="@string/second_player"
        android:textSize="20sp"
        android:textColor="#080808"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/main_playerTwoNameEditext"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/main_playerTwoNameTextView"
        android:hint="@string/enter_second_player_s_name"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="#fafafa"/>

    <Button
        android:id="@+id/main_launchButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/launch_game"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/main_playerTwoNameEditext"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/buttonshape"/>

</RelativeLayout>
