<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/ScoreLayout"
             tools:context="assignment02.csc214.project1.HotterColderFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/HotterColder_currentPlayerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"

            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#3b1f1f"/>

        <TextView
            android:id="@+id/HotterColder_numberOfGuessesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#3b1f1f"/>


        <TextView
            android:id="@+id/HotterColder_guessANumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/guess_a_number_between_1_10"
            android:layout_marginTop="80dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#080808"/>

        <EditText
            android:id="@+id/HotterColder_guessANumEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:hint="@string/enter_a_number"
            android:layout_margin="10dp"
            android:inputType="number"/>

        <Button
            android:id="@+id/HotterColder_GuessButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/guess"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/buttonshape"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/HotterColder_NewGameButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hot_new_game"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/buttonshape"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/HotterColder_ExitButton"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hot_exit"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/buttonshape"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>
