<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_hostRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ee8b6a"
    tools:context="assignment02.csc214.project1.HostActivity">

    <LinearLayout
        android:id="@+id/NameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PlayerOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:text="@string/player_one"
            android:textColor="#fb0303"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/PlayerTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:gravity="end"
            android:text="@string/player_two"
            android:textColor="#fb0303"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NameLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PlayerOneScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:background="#080808"
            android:text="@string/zero"
            android:textColor="#f7f8f9"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/PlayerTwoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:background="#080808"
            android:text="@string/zero"
            android:textColor="#fafbfc"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>



</RelativeLayout>
